blog/old/kubernetes-manifests.hold1/blog.deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: python-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: server
        image: blog
        # resources:
        #  limits:
        #    memory: "500Mi"
        #    cpu: "0.1"
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: NodePort
  selector:
    app: blog
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
